--- a/core/templates/authenticated/sidebar/admin.html
+++ b/core/templates/authenticated/sidebar/admin.html
@@ -4,4 +4,4 @@
     {% for classroom in sidebar.listings %}
         {% include "authenticated/sidebar/classroom.html" with classroom=classroom only %}
 	{% endfor %}
-{% endblock %}
+{% endblock sidebar_content %}
