--- a/core/templates/authenticated/sidebar/parent.html
+++ b/core/templates/authenticated/sidebar/parent.html
@@ -3,4 +3,4 @@
     {% for child in sidebar.child_list %}
         {% include "authenticated/sidebar/parent_child.html"  with child=child only %}
 	{% endfor %}
-{% endblock %}
+{% endblock sidebar_content %}
