--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -9,27 +9,28 @@
     <h5 class="well col-md-10 topheader header5">Reset Password</h5><br></br>
     <div class='row'>
         {% with form=vm.authenticated_body.form %}
-            <form class='password_change' action='{% url form.form_action_url_name %}' method='post'>
-            <p id='password_reset_text'> Fill in the following details to change your password : </p>
-            {% csrf_token %}
+            <form class='password_change' action='{% url form.action_url_name %}' method='post'>
+                <p id='password_reset_text'> Fill in the following details to change your password : </p>
+                {% csrf_token %}
                 {{ form.non_field_errors }}
-            <div class="fieldWrapper">
-                {{ form.old_password.errors }}
-                <label class='password_input'
-                       for="{{ form.old_password.id_for_label }}">{{ form.old_password.label }}:</label>
-                <div class='input_box'>
-                    {{ form.old_password }}
+                <div class="fieldWrapper">
+                    {{ form.old_password.errors }}
+                    <label class='password_input'
+                           for="{{ form.old_password.id_for_label }}">{{ form.old_password.label }}:</label>
+
+                    <div class='input_box'>
+                        {{ form.old_password }}
+                    </div>
+                    {% include 'authenticated/utils/help_text.html' with field=form.old_password only %}
                 </div>
-                {% include 'authenticated/utils/help_text.html' with field=form.old_password only %}
-            </div>
-            <br>
+                <br>
                 {% include "authenticated/widgets/password_change.html" with form=form only %}
-            <br>
-            <input type='submit' value='Submit'/>
-        </form>
+                <br>
+                <input type='submit' value='Submit'/>
+            </form>
         {% endwith %}
     </div>
-{% endblock %}
+{% endblock authenticated_body %}
 
 {% block authenticated_body_js %}
     <script type="text/javascript" src="{% static "js/password_strength.js" %}"></script> 
