--- a/core/templates/authenticated/settings/base.html
+++ b/core/templates/authenticated/settings/base.html
@@ -6,12 +6,11 @@
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
-    <h5 class="well col-md-10 topheader header5">Account Settings</h5><br></br>
+    <h5 class="well col-md-10 topheader header5">Account Settings</h5>
 
     <div class='row'>
         {% include "authenticated/settings/common_account.html" with settings_common=vm.authenticated_body.settings_common only %}
-        {% block customdata %}
-        {% endblock %} <br>
+        {% block custom_data %}{% endblock custom_data %}
         {% include "authenticated/settings/passwordemail_change.html" only %}
     </div>
     
