--- a/core/templates/authenticated/sidebar/userinfo.html
+++ b/core/templates/authenticated/sidebar/userinfo.html
@@ -1,7 +1,6 @@
-<li id="userinfo">
-	<h6 class='sidebarheader header6'> Personal Info </h6>
-<li>{{ userinfo.name }}</li>
-<li>{{ userinfo.user_school }}</li>
-<li id='user_id' class='invisible'>{{userinfo.user_id}}</li>
-</li>
+<h6 class='sidebarheader header6'> Personal Info </h6>
+<div class="userinfo_element">{{ userinfo.name }}</div>
+<div class="userinfo_element">{{ userinfo.user_school }}</div>
+<div id='user_id' class='invisible userinfo_element'>{{ userinfo.user_id }}</div>
+
 
