--- a/core/templates/forgot_password/form.html
+++ b/core/templates/forgot_password/form.html
@@ -1,15 +1,12 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h4 class='well col-md-12'> Reset your Password</h4>
-<div class="indented_body_left">
-    <p> Enter your email id below. An Email will be sent to you with instructions on how to recover your password </p>
-</div>
-<form method="post" action='{% url 'forgot_password' %}'>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+    <h4 class='well col-md-12'> Reset your Password</h4>
+    <div class="indented_body_left">
+        <p> Enter your email id below. An Email will be sent to you with instructions on how to recover your
+            password </p>
+    </div>
+    {% include "authenticated/utils/simple_form.html" with form=form action_url_name_override='forgot_password' csrf_token=csrf_token only %}
 {% endblock %}
 
 
