--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -18,22 +18,19 @@
             <h2> Log In to your HWCentral Account </h2>
         </br>
 
-            {% if form.errors %}
-                {#  We use a custom error message as there are no non_field_errors for the login form  #}
-                <p class="errmsg_cumulative">Login failed. Please check your username and password try again.</p>
-            {% endif %}
-
             <form method="post" action="{% url 'login' %}">
                 {% csrf_token %}
+                {{ form.non_field_errors }}
                 {% for field in form %}
                     {% include "authenticated/utils/form_field.html" with field=field only %}
                 {% endfor %}
                 <div class='loginbuttons'>
                 <input type="submit" class='btn btn-lg btn-default' value="Log In"/> 
-                    <a href=" {% url 'forgot_password' %}">Forgot your password?</a>
                 <input type="hidden" name="next" value="{{ next }}"/>
                 </div>
             </form>
+
+            <a href=" {% url 'forgot_password' %}">Forgot your password?</a>
 
             <!--- End Code for Log In ----> 
         </div>
