--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -2,7 +2,7 @@
     <p class='indented_body_right navbar-brand navbar-right'> &copy HWCentral 2015 </p>
 
     <ul class="nav navbar-nav footer">
-        <li><a href="{% url 'about' %}">About Us</a></li>
-        <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in</a></li>
+        <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in </a></li>
+        <li><a id="phone" href="#phone">Phone: +919825047325 </a></li>
     </ul>
 </div>
