landingpage base done

--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -123,8 +123,10 @@
         <span class="sr-only">Next</span>
         </a>
     </div>
+<!-- to learn more About us go to this link www.hwcentral.in/about -->
 {% endblock body %}
 {% block js %} 
 <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
 {% endblock js %}
+
 
