--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -3,12 +3,13 @@
 }
 
 .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right{
-	top:360px;
+	top:500px;
+	color: #ff0000;
+	font-size: 3vw;
 }
 .landingimage{
 	opacity: 1.0;
 	width:100%;
-	height:30%;
 	border:10px solid;	
 }
 
