--- a/core/templates/authenticated/widgets/active_assignment.html
+++ b/core/templates/authenticated/widgets/active_assignment.html
@@ -3,7 +3,7 @@
             <br>
 
             <div class="scroll">
-                <table id="active_assignment_table" class="table table-condensed table-striped table-hover" cellspacing='0'> <!-- cellspacing='0' is important, don't change -->
+                <table id="#active_assignment_table_for_{{userinfo.name}}" class="table table-condensed table-striped table-hover" cellspacing='0'> <!-- cellspacing='0' is important, don't change -->
 
                     <!-- Table Header -->
                     <thead>
