--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -3,6 +3,6 @@
 
     <ul class="nav navbar-nav footer">
         <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in </a></li>
-        <li><a id="phone" href="#phone">Phone: +919825047325 </a></li>
+        <li><a>Phone: 1-847-555-5555 </a></li>
     </ul>
 </div>
