--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -34,72 +34,72 @@
                         </div>
                     </div>
                     <div class='landingimagebox'>
-                        <img class='landingimage' src="{% static 'img/main.jpg' %}">
+                        <img class='landingimage' src="{% static 'img/index/main.jpg' %}">
                     </div>
                 </div>
             </div>
-            <div class="item">            
+            <div class="item">
                 <div class='landingbox'>
                     <div class='landingtextleft landingtext'>
                         <p> Doing homework after 6 hours of school is no cakewalk but correcting it for a class of 50 is way harder. Owing to HWCentral's automated homework correction, this will no longer be a headache.</p>
-                    </div>    
+                    </div>
                     <div class='landingimagebox'>
                         <img class='landingimage' src="{% static 'img/index/indexone.jpg' %}">
                     </div>
                 </div>
             </div>
-             <div class="item">   
+             <div class="item">
                 <div class='landingbox'>
                     <div class='landingtextright landingtext'>
                         <p> Can't wait till the parent-teacher meeting to know how your child is doing ? With HWCentral's intuitive student progress reports, you'll never be left in the dark.</p>
-                    </div>    
+                    </div>
                     <div class='landingimagebox'>
                         <img class='landingimage' src="{% static 'img/index/indextwo.jpg' %}">
                     </div>
                 </div>
             </div>
-             <div class="item">   
+             <div class="item">
                 <div class='landingbox'>
                     <div class='landingtextleft landingtext'>
                         <p> With HWCentral's advanced plagiarism checker and its ability to generate unique questions for each
                             student, you can be sure that good grades will be the only things exactly identical.</p>
-                    </div>    
+                    </div>
                     <div class='landingimagebox'>
                         <img class='landingimage' src="{% static 'img/index/indexthree.jpg' %}">
                     </div>
                 </div>
             </div>
-            <div class="item">   
+            <div class="item">
                 <div class='landingbox'>
                     <div class='landingtextright landingtext'>
                        <p> HWCentral has an extensive question bank and assignments for a variety of subjects, classes, and difficulty levels, tailored to ensure that every topic of the syllabus is thoroughly tested.</p>
-                    </div>    
+                    </div>
                     <div class='landingimagebox'>
                         <img class='landingimage' src="{% static 'img/index/indexfour.jpg' %}">
                     </div>
                 </div>
             </div>
-            <div class="item">   
+            <div class="item">
                 <div class='landingbox'>
                     <div class='landingtextleft landingtext'>
                         <p> With sagging shoulders and a bad posture becoming a common sight, HWCentral aims to make bags lighter, minds brighter, and schools greener by moving homework online. </p>
-                    </div>    
+                    </div>
                     <div class='landingimagebox'>
                         <img class='landingimage' src="{% static 'img/index/indexfive.jpg' %}">
                     </div>
                 </div>
             </div>
-            <div class="item">   
+            <div class="item">
                 <div class='landingbox'>
                     <div class='landingtextright landingtext'>
                         <p> HWCentral's large collection of ready-to-assign homework material allows teachers to ensure that their students get all the practice they need, thus enabling more time for student-teacher interactions. </p>
-                    </div>    
+                    </div>
                     <div class='landingimagebox'>
                         <img class='landingimage' src="{% static 'img/index/indexsix.jpg' %}">
                     </div>
                 </div>
             </div>
-            <div class="item">   
+            <div class="item">
                 <div class='landingbox'>
                     <div class='landingtextend landingtext'>
                         <p class='lead'> With a constantly expanding database of questions, assignments and educational videos, HWCentral ensures a world-class learning experience that will never see a full stop. </br>
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <div class='landingimagebox'>
-                        <img class='landingimage' src="{% static 'img/end.jpg' %}">
+                        <img class='landingimage' src="{% static 'img/index/end.jpg' %}">
                     </div>
                 </div>
             </div>
