--- a/core/templates/authenticated/question/help_text.html
+++ b/core/templates/authenticated/question/help_text.html
@@ -1,3 +1,3 @@
 {% if field.help_text %}
-    <span class="help_text help_tip"><p>{{ field.help_text }}</p></span>
+    <span class="help_text help_tip"><div class="help_tip_container">{{ field.help_text }}</div></span>
 {% endif %}
