--- a/core/templates/authenticated/widgets/math_toolbox.html
+++ b/core/templates/authenticated/widgets/math_toolbox.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<button type="button" class='btn btn-default toolbox_button'>Maths Toolbox</button>
+<button type="button" class='btn btn-default toolbox_button'>Math Toolbox</button>
 <div class="math_toolbox" title="The Math Toolbox">
     <img class="toolbox_option top_row" title="Cube" onclick="add_text('^3')"
          src="{% static 'img/math_toolbox/cube.png' %}">
