--- a/core/templates/authenticated/question/subpart.html
+++ b/core/templates/authenticated/question/subpart.html
@@ -21,7 +21,7 @@
                     </li>
                 {% endfor %}
             </ol>
-            {% if subpart.answer.answer_format == subpart.answer.FORMATS.NUMERIC %}
+            {% if subpart.answer.answer_format == subpart.answer.FORMATS.TEXTUAL %}
                 {% if subpart.answer.show_toolbox %}
                     {% include 'authenticated/widgets/math_toolbox.html' only %}
                 {% endif %}
@@ -30,7 +30,7 @@
             {% with field_key=question_index|add_str:"_"|add_str:question_subpart_index %}
                 {% include 'authenticated/question/form_field.html' with field=form|get_form_field:field_key only %}
             {% endwith %}
-            {% if subpart.type == subpart.TYPES.NUMERIC %}
+            {% if subpart.type == subpart.TYPES.TEXTUAL %}
                 {% if subpart.show_toolbox %}
                     {% include 'authenticated/widgets/math_toolbox.html' only %}
                 {% endif %}
