--- a/core/static/css/submission_id.css
+++ b/core/static/css/submission_id.css
@@ -1,3 +1,7 @@
-.question_hint_hidden {
+.question_subpart_hint_hidden, .question_subpart_solution_hidden {
     display: none;
+}
+
+.progress-bar {
+    color: black;
 }
