--- a/core/templates/authenticated/question/hint.html
+++ b/core/templates/authenticated/question/hint.html
@@ -1,4 +1,4 @@
 {% include "authenticated/question/show_hint_button.html" only %}
-<div class="question_hint question_hint_hidden">
+<div class="question_subpart_hint question_subpart_hint_hidden">
     {% include "authenticated/question/element.html" with element=hint only %}
 </div>
