--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -4,7 +4,7 @@
 
 .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right{
 	top:500px;
-	color: #ff0000;
+	color: #778899;
 	font-size: 3vw;
 }
 .landingimage{
