--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -10,7 +10,7 @@
     <div class='row'>
         {% with form=vm.authenticated_body.form %}
             <form class='password_change' action='{% url form.action_url_name %}' method='post'>
-                <p id='password_reset_text'> Fill in the following details to change your password : </p>
+                <div id='password_reset_text'> Fill in the following details to change your password : </div>
                 {% csrf_token %}
                 {{ form.non_field_errors }}
                 <div class="fieldWrapper">
