--- a/core/templates/authenticated/settings/passwordemail_change.html
+++ b/core/templates/authenticated/settings/passwordemail_change.html
@@ -1,3 +1,3 @@
-<div class="largebutton floatleft passchange">
+<div class="btn btn-danger btn-sm floatleft passchange">
 	<a href="{% url 'password' %}"><div class="buttonlabel" > Change Password</div></a>
 </div>
