--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -14,7 +14,7 @@
 
     <div class="logintext">
         <div class="logindiv">
-            <!--- Start Code for Log In ---->
+            <!--- Start Code for Log In -->
             <h2> Log In to your HWCentral Account </h2>
         </br>
 
@@ -27,12 +27,13 @@
                 <div class='loginbuttons'>
                 <input type="submit" class='btn btn-lg btn-default' value="Log In"/> 
                 <input type="hidden" name="next" value="{{ next }}"/>
+                <a href=" {% url 'forgot_password' %}">Forgot your password?</a>
                 </div>
             </form>
 
-            <a href=" {% url 'forgot_password' %}">Forgot your password?</a>
+            
 
-            <!--- End Code for Log In ----> 
+            <!--- End Code for Log In --> 
         </div>
     </div>
     <div>
