--- a/core/templates/password_reset/form.html
+++ b/core/templates/password_reset/form.html
@@ -4,11 +4,13 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static "css/password_strength.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/email_reset.css" %}" type="text/css"/>
+
 {% endblock css %}
 {% block body %}
     <h4 class='well col-md-12'> Reset your Password</h4>
     {% if validlink %}
-         <p id='password_reset_text'> Fill in the following details to reset your password : </p>
+         <div id='password_reset_text'> Fill in the following details to reset your password : </div>
         <form class='password_change' method="post">
             {# action attr not needed for form in html5 (targets same url by default) #}
             {% csrf_token %}
